--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="img-content">
-        <img src="src/images/image-header-desktop.jpg" width="540px" height="446px" alt="">
+        <img src="src/images/image-header-desktop.jpg" alt="">
     </div>
     
   </div>
